# ai-memory-engineering

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
app/: bank_client_profiles.py  config.py  schemas.py
app/agent/: agent.py  prompts.py
app/db/: database.py
app/memory/: __init__.py  episodic.py
bank_client_profiles/: client_a.json  client_b.json
tests/: helpers.py  test_01_show_working_memory.py  test_02_scenario_0_baseline.py  test_03_session1_interactive.py  test_04_episodic_store_search.py  test_05_episodic_top3_recall.py  test_06_precision_case.py  test_07_episodic_end_to_end.py  test_08_recency_conflict.py
